# crand

./: CMakeLists.txt  LICENSE  rand.c  rand.h  readme.md  test.c  test.cpp
.github/workflows/: mac_test.yml
include/: ctr.h  sys_rng.h  xorshift.h  xoshiro.h
include/aes/: endian.h
include/crand/: crand.h  ctr.h  lfsr.h  prng.hpp  splitmix64.h  sys_rng.h  version.h  xorshift.h  xoshiro.h
include/crand/aes/: aes.h  endian.h  luts.h
include/crand/chacha20/: chacha20.h
src/: ctr.c  ctr.cpp  lfsr.c  lfsr.cpp  sys_rng.c  sys_rng.cpp  version.c  xorshift.c  xorshift.cpp  xoshiro.c  xoshiro.cpp
src/aes/: aes.c  aes.cpp  luts.c
src/chacha20/: chacha20.c  chacha20.cpp
tests/: ctr.c  ctr.cpp  lfsr.c  lfsr.cpp  splitmix64.c  std_test.cpp  sys_rng.c  sys_rng.cpp  test_vectors.h  tests.cpp  tests.h  xoshiro.c  xoshiro.cpp
tests/python/: rng.py
